Fix code overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -60,6 +60,10 @@ body {
     }
 }
 
+.highlight{
+    overflow-x: scroll;
+}
+
 header {
     text-align: right;
 }
